Added case study logic, node types, final state of calcs  (needs fixing)

--- a/inputs/case_study_parameters.yaml
+++ b/inputs/case_study_parameters.yaml
@@ -14,8 +14,12 @@ layer_sequence:
 
 KG_target_nodes:
   [
-    "GMT"
+    "GMT",
+    "Trim",
+    "%",
+    #"V_fuel"
   ]
+
 
 excel_filename:
   "local_calculations.xlsx"
