Updated Excel Models, Local Solvers, Dump pre-revamp

--- a/inputs/case_study_parameters.yaml
+++ b/inputs/case_study_parameters.yaml
@@ -15,8 +15,10 @@ layer_sequence:
 KG_target_nodes:
   [
     "GMT",
-    "Trim",
-    "%",
+    #"required_power",
+    #"Trim",
+
+    #"%",
     #"V_fuel"
   ]
 
