--- a/inputs/simple_case_study_parameters.yaml
+++ b/inputs/simple_case_study_parameters.yaml
@@ -12,10 +12,15 @@ layer_sequence:
     "DIST"
   ]
 
+layer_networks:
+  NAVARCH: "KS_navarch.net"
+  OPS: "KS_OPS_enhanced_1_Veh.net"
+  DIST: "KS_DIST.net"
+
 KG_target_nodes:
-      n_F35: 0
-      n_V22: 0
-      n_AV8B: 0
+      #n_F35: 0
+      #n_V22: 0
+      #n_AV8B: 0
       n_SH60: 36
       GMT:
       '%':
